# bazel_or-tools

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  basic_example.cc
.github/workflows/: amd64_docker.yml  amd64_linux.yml  amd64_macos.yml  amd64_windows.yml  arm64_macos.yml  docker.yml  linux.yml  macos.yml  windows.yml
bazel/: BUILD.bazel  bliss-0.73.patch  bliss.BUILD.bazel  scip-v920.patch  scip.BUILD.bazel
ci/: Makefile  README.md
ci/docker/almalinux/: Dockerfile
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/opensuse/: Dockerfile
ci/docker/rockylinux/: Dockerfile
ci/docker/ubuntu/: Dockerfile
ci/docs/: docker.dot
main/: BUILD  BUILD.bazel  template.cc
patches/: BUILD.bazel
registry/modules/or-tools/9.12/: MODULE.bazel  source.json
registry/modules/or-tools/9.12/patches/: bazel.patch
