load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")

cc_binary(
  name = "basic_example",
  srcs = ["basic_example.cc"],
  deps = [
    "@abseil-cpp//absl/base:log_severity",
    "@abseil-cpp//absl/log:globals",
    "@or-tools//ortools/base",
    "@or-tools//ortools/init",
    "@or-tools//ortools/linear_solver",
    "@or-tools//ortools/linear_solver:linear_solver_cc_proto",
  ],
)

cc_test(
  name = "basic_example_test",
  srcs = ["basic_example.cc"],
  deps = [
    ":basic_example",
    "@abseil-cpp//absl/base:log_severity",
    "@abseil-cpp//absl/log:globals",
    "@or-tools//ortools/base",
    "@or-tools//ortools/init",
    "@or-tools//ortools/linear_solver",
    "@or-tools//ortools/linear_solver:linear_solver_cc_proto",
  ],
)
